@@ -319,6 +319,12 @@ static void sim_read_command_line(int *argc_ptr, char **argv)
 			continue;
 		}
 
+		/* Help for cache configuration file */
+		if (!strcmp(argv[argi], "--help-cache-config")) {
+			fprintf(stderr, "%s", cache_system_config_help);
+			continue;
+		}
+
 		/* Help for CPU configuration file */
 		if (!strcmp(argv[argi], "--help-cpu-config")) {
 			fprintf(stderr, "%s", cpu_config_help);
@@ -445,10 +451,10 @@ int main(int argc, char **argv)
 {
 	/* Initial information */
 	fprintf(stderr, "\n");
-	fprintf(stderr, "Multi2Sim %s - A Simulation Framework for CPU-GPU Heterogeneous Computing\n",
+	fprintf(stderr, "; Multi2Sim %s - A Simulation Framework for CPU-GPU Heterogeneous Computing\n",
 		VERSION);
-	fprintf(stderr, "Please use command 'm2s --help' for a list of command-line options.\n");
-	fprintf(stderr, "Last compilation: %s %s\n", __DATE__, __TIME__);
+	fprintf(stderr, "; Please use command 'm2s --help' for a list of command-line options.\n");
+	fprintf(stderr, "; Last compilation: %s %s\n", __DATE__, __TIME__);
 	fprintf(stderr, "\n");
 	opt_print_options(stderr);
 
@@ -516,6 +522,5 @@ int main(int argc, char **argv)
 	mhandle_done();
 
 	/* End */
-	fprintf(stderr, "\n");
 	return 0;
 }
